--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,44 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+main {
+  max-width: 1280px;
+  margin: auto;
+  min-height: 90vh;
+  padding: 10px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.GenerateList {
+  max-width: 100%;
+  margin: auto;
+}
+.GenerateList .list,
+.GenerateList .box,
+.GenerateList .list ul {
+  list-style: none;
+  width: 100%;
+  text-align: center;
+  margin: auto;
+  padding: 5px;
+}
+.GenerateList .list ul li {
+  margin: auto;
+  padding: 5px;
+  background-color: #efefef;
+}
+.GenerateList .list ul li p {
+  text-align: left;
+}
+.GenerateList .btn {
+  padding: 3px 7px;
+  border-radius: 5px;
+}
+.GenerateList .btn.btn-success {
+  background-color: green;
+  color: #fff;
+}
+.GenerateList .btn.btn-danger {
+  background-color: red;
+  color: #fff;
 }
